--- a/galeria.html
+++ b/galeria.html
@@ -28,7 +28,7 @@
   </div>
   <div class="Picture">
     <img class="Picture-img" src="/img/foto4.jpg" alt="" />
-    <div class="Picture-note"><span>Bị lườm lúc lấy xe</span></div>
+    <div class="Picture-note"><span>Mặt đần bế con</span></div>
   </div>
   <div class="Picture">
     <img class="Picture-img" src="/img/foto5.jpg" alt="" />
